Corección en la arquitectura de la aplicación para soportar representantes en caso de clientes de tipo compañia
